--- a/TrackerLogic/TrackerLogic.csproj
+++ b/TrackerLogic/TrackerLogic.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DateAndTime.cs" />
+    <Compile Include="Clock.cs" />
     <Compile Include="Invoice.cs" />
     <Compile Include="DataEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
