--- a/TrackerLogic/TrackerLogic.csproj
+++ b/TrackerLogic/TrackerLogic.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Clock.cs" />
     <Compile Include="Invoice.cs" />
+    <Compile Include="Dataset.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
