--- a/BillTracker/BillTracker.csproj
+++ b/BillTracker/BillTracker.csproj
@@ -51,10 +51,19 @@
     <Compile Include="BillTracker.Designer.cs">
       <DependentUpon>BillTracker.cs</DependentUpon>
     </Compile>
+    <Compile Include="MarkingScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MarkingScreen.Designer.cs">
+      <DependentUpon>MarkingScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="BillTracker.resx">
       <DependentUpon>BillTracker.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MarkingScreen.resx">
+      <DependentUpon>MarkingScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
