--- a/TrackerLogic/TrackerLogic.csproj
+++ b/TrackerLogic/TrackerLogic.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Clock.cs" />
     <Compile Include="Invoice.cs" />
     <Compile Include="Dataset.cs" />
+    <Compile Include="Pagination.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validator.cs" />
   </ItemGroup>
